vlib/v/checker/tests/immutable_struct_postfix.vv
struct Aaa {
mut:
	i int
}

fn main() {
	a := Aaa{}
	a.i++
	a.i--
}
